src/test/deca/context/invalid/created/assign_compatible/INT_FLOAT.deca
// Description:
//      Test de la compatibilite pour l'affectation
//      Regle 1, T1 float et T2 int
// Resultats:
//      Erreur contexte Ligne 8 : Types don't match! 

{
    int a = 4.8;
}